--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
     </label>
     <button type = "submit"> Add Client</button>
     </form>
+    
+     <div id="ClientList"></div>
+    <button onclick="displayVIPClients()"> Show VIP Clients</button>
+    
 </body>
 </html>
