--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             <option value="Male"> Male </option> 
             <option value="Unspecified"> Prefer not to say </option> 
         </select>
+        <select id="FitnessProgram">
+            <option value="fat loss"> Fat loss</option>
+            <option value="senior finess"> Senior Fitness</option>
+            <option value="muscle gain"> Muscle Gain</option>
+            <option value="pre/postnatal fitness"> Pre/Postnatal Fitness</option>
+            <option value="contest preparation"> Contest Preparation</option>
+            <option value="overall fitness"> Overall Fitness</option>
+            
+        </select>
         <input type="text" id=" ContactInfo" placeholder="ContactInfo" required/>
         <input type="date" id=" joinedDate"required/>
         <input type="date" id=" endingDate"required/>
