--- a/index.html
+++ b/index.html
@@ -1,83 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Trainer Client Management</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <title>MyAngularApp</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-
-    <!-- Header Section -->
-    <header>
-        <div class="logo-container">
-            <img src="Screenshot 2024-09-26 at 6.00.08 pm.png" alt="Training Place Logo" class="logo">
-            <h1>Pariwartan</h1>
-        </div>
-    </header>
-
-    <!-- Add or Update Client Card -->
-    <section id="clientFormContainer">
-        <div class="card">
-            <h2>Add or Update Client</h2>
-            <form id="clientDetailsForm">
-                <label for="clientID">Client ID:</label>
-                <input type="text" id="clientID" placeholder="Client ID" required />
-
-                <label for="name">Name:</label>
-                <input type="text" id="name" placeholder="Name" required />
-
-                <label for="dob">DOB:</label>
-                <input type="date" id="dob" placeholder="Date of Birth" required />
-
-                <label for="gender">Gender:</label>
-                <select id="gender" required>
-                    <option value="Female">Female</option>
-                    <option value="Male">Male</option>
-                    <option value="Unspecified">Unspecified</option>
-                </select>
-
-                <label for="fitnessProgram">Fitness Program:</label>
-                <select id="fitnessProgram" required>
-                    <option value="fat loss">Fat loss</option>
-                    <option value="senior fitness">Senior Fitness</option>
-                    <option value="muscle gain">Muscle Gain</option>
-                    <option value="pre/postnatal fitness">Pre/Postnatal Fitness</option>
-                    <option value="contest preparation">Contest Preparation</option>
-                    <option value="overall fitness">Overall Fitness</option>
-                </select>
-
-                <label for="contactInfo">Contact Info:</label>
-                <input type="text" id="contactInfo" placeholder="Contact Info" required />
-
-                <label for="joinedDate">Joined Date:</label>
-                <input type="date" id="joinedDate" required />
-
-                <label for="endingDate">Ending Date:</label>
-                <input type="date" id="endingDate" required />
-
-                <label for="specialHealthNotes">Special Health Notes:</label>
-                <textarea id="specialHealthNotes" placeholder="Special Health Notes"></textarea>
-
-                <label>
-                    <input type="checkbox" id="isVIP" />
-                    VIP Client
-                </label><br>
-
-                <button type="submit">Add Client</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Clients Display Section -->
-    <section id="clientDisplayContainer">
-        <div class="card">
-            <h2>Clients</h2>
-            <div id="clientList"></div>
-        </div>
-    </section>
-
-    <script src="app.js" type="module"></script>
-
+  <app-root></app-root>
 </body>
 </html>
