--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,7 @@
     <title>Personal Trainer Client Management</title>
     <style>
         /* General Styles */
+/* Base styles */
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -82,7 +82,7 @@ section {
 }
 
 #clientDetailsForm button:hover {
-    background-color: #3a713c;
+    background-color: #2c5a2e;
 }
 
 #clientDetailsForm textarea {
@@ -91,9 +91,9 @@ section {
 }
 
 /* Client Display Section */
-#clientList {
+#clientList, #vipClientList {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
 }
 
@@ -102,18 +102,29 @@ section {
     border-radius: 8px;
     padding: 1em;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
 }
 
 .client-card h3 {
     margin-top: 0;
+    margin-bottom: 0.5em;
 }
 
 .client-card p {
     font-size: 0.9em;
     color: #555;
+    margin-bottom: 0.5em;
+}
+
+.client-card .button-group {
+    margin-top: auto;
+    display: flex;
+    gap: 0.5em;
 }
 
 .client-card button {
+    flex: 1;
     background-color: #284c44;
     color: white;
     border: none;
@@ -126,6 +137,7 @@ section {
 .client-card button:hover {
     background-color: #155724;
 }
+
 
 /* Error Message Styles */
 #errorContainer {
@@ -140,6 +152,105 @@ section {
     background-color: #d4edda;
     color: #155724;
 }
+
+#searchContainer, #vipClientContainer {
+    margin-top: 2em;
+}
+
+#searchForm {
+    display: flex;
+    gap: 1em;
+    margin-bottom: 1em;
+}
+
+#searchForm input {
+    flex-grow: 1;
+}
+
+#searchForm button, #showVIPClientsBtn {
+    background-color: #3a713c;
+    color: white;
+    border: none;
+    padding: 0.5em 1em;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+#searchResult, #vipClientList {
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 1em;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Responsive styles */
+@media screen and (max-width: 768px) {
+    section {
+        padding: 0.5em;
+    }
+
+    .card {
+        padding: 1em;
+    }
+
+    #clientList, #vipClientList {
+        grid-template-columns: 1fr;
+    }
+
+    #searchForm {
+        flex-direction: column;
+    }
+
+    #searchForm input,
+    #searchForm button,
+    #showVIPClientsBtn {
+        width: 100%;
+    }
+
+    .client-card {
+        font-size: 0.9em;
+    }
+
+    .client-card .button-group {
+        flex-direction: column;
+    }
+}
+
+/* Accessibility improvements */
+@media (prefers-reduced-motion: reduce) {
+    * {
+        transition: none !important;
+    }
+}
+
+:focus {
+    outline: 2px solid #3a713c;
+    outline-offset: 2px;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
+/* Wider screen adjustments */
+@media screen and (min-width: 1200px) {
+    section {
+        max-width: 1100px;
+    }
+
+    #clientList {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
 
     </style>
    
@@ -207,6 +318,27 @@ section {
             </form>
         </div>
     </section>
+    <!-- Search Client Section -->
+    <section id="searchContainer">
+        <div class="card">
+            <h2>Search Client</h2>
+            <form id="searchForm">
+                <input type="text" id="searchClientId" placeholder="Enter Client ID" required>
+                <button type="submit">Search</button>
+            </form>
+            <div id="searchResult"></div>
+        </div>
+    </section>
+
+    <!-- VIP Clients Section -->
+    <section id="vipClientContainer">
+        <div class="card">
+            <h2>VIP Clients</h2>
+            <button id="showVIPClientsBtn">Show VIP Clients</button>
+            <div id="vipClientList"></div>
+        </div>
+    </section>
+
 
     <!-- Clients Display Section -->
     <section id="clientDisplayContainer">
